--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -1,13 +1,14 @@
 .table {
   display: grid;
   grid-auto-flow: rows;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: min-content 1fr 2fr;
 
   .table__row {
     display: grid;
     grid-template-columns: subgrid;
-    grid-column: 1/3;
+    grid-column: 1/4;
     padding: var(--s-sm);
+    gap: var(--s-md);
 
     &:nth-child(even) {
       background-color: var(--color-generic-gray-light);
@@ -22,12 +23,15 @@
   .table__cell {
     display: flex;
     align-items: center;
-    gap: var(--s-md);
+    gap: var(--s-sm);
   }
 
   .table__image {
     width: 4.8rem;
     aspect-ratio: 1;
-    image-rendering: pixelated;
+  }
+
+  .table__id {
+    color: var(--color-generic-gray-dark);
   }
 }
