Adds loading state on the list view

--- a/src/components/Input.css
+++ b/src/components/Input.css
@@ -13,4 +13,10 @@
   &::placeholder {
     color: var(--color-generic-black);
   }
+
+  &[disabled] {
+    background-color: var(--color-generic-gray-dark);
+    border-style: inset;
+    cursor: not-allowed;
+  }
 }
