--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -1,14 +1,13 @@
 .table {
   display: grid;
-  grid-auto-flow: rows;
-  grid-template-columns: min-content 1fr 2fr;
+  grid-template-columns: min-content 1fr;
 
   .table__row {
     display: grid;
     grid-template-columns: subgrid;
-    grid-column: 1/4;
-    padding: var(--s-sm);
-    gap: var(--s-md);
+    grid-column: 1/3;
+    padding: var(--s-xs);
+    gap: var(--s-sm);
 
     &:nth-child(even) {
       background-color: var(--color-generic-gray-light);
@@ -24,6 +23,10 @@
     display: flex;
     align-items: center;
     gap: var(--s-sm);
+
+    &:nth-child(1) {
+      grid-row: 1/3;
+    }
   }
 
   .table__image {
@@ -33,5 +36,28 @@
 
   .table__id {
     color: var(--color-generic-gray-dark);
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .table {
+    grid-auto-flow: rows;
+    grid-template-columns: min-content 1fr 1fr;
+
+    .table__row {
+      padding: var(--s-sm);
+      gap: var(--s-md);
+      grid-column: 1/4;
+    }
+
+    .table__cell {
+      display: flex;
+      align-items: center;
+      gap: var(--s-sm);
+
+      &:nth-child(1) {
+        grid-row: 1/2;
+      }
+    }
   }
 }
